--- a/style.css
+++ b/style.css
@@ -39,6 +39,14 @@
     padding: 10px 0;
     z-index: 1002;
   }
+
+  .header-text {
+    color: #ffffff;
+    text-shadow: #ff688c 0px 0px 25px;
+    font-size: 2.0em;
+    text-align: center;
+    font-family: 'crosswindsnowind';
+  }
   
   header h1 {
     font-size: 2.0rem;
@@ -69,6 +77,7 @@
     backdrop-filter: blur(5px);
     transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
     text-decoration: none;
+    box-shadow: #ff688c 0 0 5px;
   }
   
   .social-button i {
@@ -79,7 +88,7 @@
   
   .social-button:hover {
     transform: translateY(-5px) scale(1.1);
-    border-radius: 20px;
+    border-radius: 15px;
     background: #ff688c;
     box-shadow: 
       0 5px 15px rgba(255, 104, 140, 0.4),
@@ -150,7 +159,7 @@
     position: relative;
     background: rgba(20, 20, 20, 0.95);
     padding: 25px;
-    border-radius: 50px;
+    border-radius: 25px;
     margin-bottom: 25px;
     margin-left: 20px;
     margin-right: 20px;
@@ -177,26 +186,31 @@
     padding-bottom: 56.25%;
     height: 0;
     overflow: hidden;
-    border-radius: 10px;
+    border-radius: 15px;
   }
   
   /* Navigation Buttons */
   .channel-buttons {
     display: flex;
     justify-content: center;
-    gap: 10px;
+    gap: 15px;
     margin-bottom: 10px;
   }
   
   .channel-btn {
-    padding: 10px 20px;
-    background: rgba(255, 104, 140, 0.1);
-    border: 2px solid transparent;
-    border-radius: 5px;
+    padding-top: 15px;
+    padding-bottom: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
+    background: #ff688b0a;
+    border: 1px solid transparent;
+    border-radius: 15px;
     color: #ff688c;
-    font-size: 1em;
+    font-size: 1.1em;
     cursor: pointer;
     transition: all 0.3s ease;
+    font-family: 'crosswindsnowind';
+    box-shadow: #ff688c 0 0 5px;
   }
   
   .channel-btn:hover {
@@ -206,7 +220,7 @@
   .channel-btn.active {
     background: #ff688c;
     color: #fff;
-    box-shadow: 0 0 15px #ff688c;
+    box-shadow: 0 0 10px #ff688c;
   }
     
   /* Other Videos Section */
@@ -236,10 +250,10 @@
   .video-card {
     width: 100%;
     height: 230px;
-    background: rgba(0, 0, 0, 0.9);
-    border-radius: 12px;
+    background: rgba(0, 0, 0, 1);
+    border-radius: 15px;
     overflow: hidden;
-    box-shadow: 0 0 5px #ff688c;
+    box-shadow: 0 0 6px #ff688c;
     transition: transform 0.3s, box-shadow 0.3s;
     position: relative;
     display: flex;
