--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@
   .social-button {
     width: 70px;
     height: 70px;
-    background: rgba(255, 104, 140, 0.1);
+    background: #ff688c1a;
     border-radius: 15px;
     display: flex;
     align-items: center;
@@ -163,7 +163,7 @@
   /* Video Sections */
   .newest-video {
     position: relative;
-    background: rgba(20, 20, 20, 0.95);
+    background: #141414;
     padding: 25px;
     border-radius: 25px;
     margin-bottom: 25px;
@@ -256,7 +256,7 @@
   .video-card {
     width: 100%;
     height: 230px;
-    background: rgba(0, 0, 0, 1);
+    background: #141414;
     border-radius: 15px;
     overflow: hidden;
     box-shadow: 0 0 6px var(--primary-pink);
