--- a/style.css
+++ b/style.css
@@ -503,8 +503,9 @@
     }
   
     .channel-buttons {
-      padding-left: 35px;
-      padding-right: 35px;
+      padding-left: 20px;
+      padding-right: 20px;
+      width: 100%;
     }
     
     .channel-btn {
@@ -538,8 +539,9 @@
     }
   
     .channel-buttons {
-      padding-left: 35px;
-      padding-right: 35px;
+      padding-left: 10px;
+      padding-right: 10px;
+      width: 100%;
     }
     
     .channel-btn {
